--- a/requirements.txt
+++ b/requirements.txt
@@ -103,7 +103,7 @@ six==1.16.0
 spotipy==2.23.0
 tensorboard==2.12.3
 tensorboard-data-server==0.7.0
-tensorflow @ file:///C:/Users/Kyle%20W/Desktop/Deeplearning/Tensorflow%20Files/tensorflow-2.12.0-cp311-cp311-win_amd64.whl
+tensorflow==2.12.0
 tensorflow-estimator==2.12.0
 tensorflow-intel==2.12.0
 tensorflow-io-gcs-filesystem==0.31.0
